// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFontStyle should apply default styles 1`] = `
.c0 {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`getFontStyle should apply styles for a specific font variant and font weight 1`] = `
.c0 {
  font-size: 4.8rem;
  font-weight: 800;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  line-height: 5.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`getFontStyle should apply styles for a specific font weight 1`] = `
.c0 {
  font-size: 1.4rem;
  font-weight: 800;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`getFontStyle should apply styles for specific font variant 1`] = `
.c0 {
  font-size: 4.8rem;
  font-weight: 600;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  line-height: 5.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

<div>
  <div
    class="c0"
  />
</div>
`;
